Make more fine responsive

--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -84,7 +84,7 @@
 
         <div class="flex gap-xl" style="flex-wrap: wrap; align-items: flex-start;">
             <!-- Orders -->
-            <div style="flex: 2; min-width: 400px;">
+            <div style="flex: 2; ">
                 <div class="card" style="padding: 2rem;" data-aos="fade-right">
                     <div class="flex justify-between items-center mb-lg">
                         <h3>{% trans "Recent Orders" %}</h3>
