--- a/templates/base.html
+++ b/templates/base.html
@@ -168,9 +168,9 @@
     </footer>
     
     <!-- WhatsApp Floating Button -->
-    <a href="https://wa.me/{{ COMPANY_WHATSAPP|slice:'1:' }}" target="_blank" class="whatsapp-float" title="{% trans 'Chat on WhatsApp' %}">
+    <!-- <a href="https://wa.me/{{ COMPANY_WHATSAPP|slice:'1:' }}" target="_blank" class="whatsapp-float" title="{% trans 'Chat on WhatsApp' %}">
         <i class="fab fa-whatsapp"></i>
-    </a>
+    </a> -->
     
     <!-- Scripts -->
     <!-- AOS -->
