--- a/templates/orders/checkout.html
+++ b/templates/orders/checkout.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="flex gap-xl" style="flex-wrap: wrap; align-items: flex-start;">
             <!-- Form -->
-            <div style="flex: 2; min-width: 400px;">
+            <div style="flex: 2; ">
                 <form method="POST" action="{% url 'orders:checkout' %}">
                     {% csrf_token %}
 
