--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -62,7 +62,7 @@
 
         <!-- Contact Form -->
         <div class="flex gap-xl" style="flex-wrap: wrap;">
-            <div style="flex: 1.5; min-width: 400px;" data-aos="fade-right">
+            <div style="flex: 1.5; " data-aos="fade-right">
                 <div class="card" style="padding: 2.5rem;">
                     <h3 class="mb-xl">{% trans "Send Us a Message" %}</h3>
 
