--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -100,7 +100,7 @@
     <div class="container">
         <div class="flex gap-xl" style="flex-wrap: wrap;">
             <!-- Gallery -->
-            <div style="flex: 1; min-width: 400px;" data-aos="fade-right">
+            <div style="flex: 1; " data-aos="fade-right">
                 <div class="product-gallery">
                     {% if product.images.count > 1 %}
                     <div class="product-thumbs">
@@ -126,7 +126,7 @@
             </div>
 
             <!-- Info -->
-            <div style="flex: 1; min-width: 400px;" data-aos="fade-left">
+            <div style="flex: 1; " data-aos="fade-left">
                 <div class="badge badge-gold mb-md">{{ product.category.name }}</div>
                 <h1 style="font-size: 2rem; margin-bottom: 1rem;">{{ product.name }}</h1>
 
